syntax = "proto3";

package v1.aspbv1;

import "v1/apb/anime_character.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/aspb;aspbv1";

message GetAnimeSeasonCharactersRequest {
  int64 seasonID = 1;
}

message GetAnimeSeasonCharactersResponse {
  repeated apbv1.AnimeCharacter seasonCharacters = 1;
}